[build-system]
requires=["setuptools","setuptools-scm"]
build-backend="setuptools.build_meta"

[project]
name='grand_tours'
version="0.1"
dependencies = [
"certifi",
"cffi",
"curl_cffi",
"markdown-it-py",
"mdurl",
"pycparser",
"Pygments",
"rich",
"typing_extensions",
]

[project.optional-dependencies]
dev = ["black", "flake8", "isort", "pre-commit"]

